--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ProgrammingAssignment2"]
-	path = ProgrammingAssignment2
+	path = ~/R/datasciencecoursera/r_programming/week3/ProgrammingAssignment2/
 	url = https://github.com/minoad/ProgrammingAssignment2  
