--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "r_programming/week3/ProgrammingAssignment2"]
 	path = r_programming/week3/ProgrammingAssignment2
-	url = https://github.com/minoad/ProgrammingAssignment2
+	url = https://github.com/minoad/ProgrammingAssignment2.git
